syntax = "proto3";
package akash.deployment.v1beta4;

import "gogoproto/gogo.proto";

import "cosmos/base/v1beta1/coin.proto";

import "akash/base/resources/v1beta4/resources.proto";

option go_package = "pkg.akt.dev/go/node/deployment/v1beta4";

// ResourceUnit extends Resources and adds Count along with the Price.
message ResourceUnit {
  option (gogoproto.equal) = true;

  // Resource holds the amount of resources.
  akash.base.resources.v1beta4.Resources resource = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.embed)    = true,
    (gogoproto.jsontag)  = "resource",
    (gogoproto.moretags) = "yaml:\"resource\""
  ];
  // Count corresponds to the amount of replicas to run of the resources.
  uint32 count = 2 [
    (gogoproto.jsontag)  = "count",
    (gogoproto.moretags) = "yaml:\"count\""
  ];
  // Price holds the pricing for the resource units.
  cosmos.base.v1beta1.DecCoin price = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag)  = "price",
    (gogoproto.moretags) = "yaml:\"price\""
  ];
}
